--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,7 +14,10 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "chart.js": "^4.5.1",
+    "lucide-react": "^0.545.0",
     "react": "^19.2.0",
+    "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.2.0",
     "react-router-dom": "^7.9.4"
   },
@@ -23,6 +26,6 @@
     "autoprefixer": "10.4.21",
     "postcss": "8.5.6",
     "tailwindcss": "^3.4.13",
-    "vite": "7.1.9"
+    "vite": "^7.1.9"
   }
 }
