--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "axios": "^1.12.2",
     "chart.js": "^4.5.1",
     "lucide-react": "^0.545.0",
     "react": "^19.2.0",
